// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`автоподнятие отправит правильный экшен при включении 1`] = `
Array [
  Object {
    "category": "cars",
    "offerId": "1085562758-1970f439",
  },
  true,
]
`;

exports[`автоподнятие отправит правильный экшен при выключении 1`] = `
Array [
  Object {
    "category": "cars",
    "offerId": "1085562758-1970f439",
  },
]
`;

exports[`при включении/выключении автопролонгации отправит правильный экшен в лк 1`] = `
Array [
  false,
  Object {
    "category": "cars",
    "offerId": "1085562758-1970f439",
    "product": "package_vip",
  },
]
`;

exports[`при включении/выключении автопролонгации отправит правильный экшен на карточке 1`] = `
Array [
  true,
  Object {
    "product": "package_vip",
  },
]
`;

exports[`при клике на сервис откроет галерею с васами 1`] = `
Array [
  "VAS_GALLERY",
  Object {
    "from": "api_m_card",
    "offerId": "1085562758-1970f439",
    "service": "package_vip",
  },
]
`;

exports[`при попадании сервиса в поле видимости залогирует показ 1`] = `
Array [
  Object {
    "category": "cars",
    "event": "VAS_SHOW",
    "from": "api_m_card",
    "offerId": "1085562758-1970f439",
    "originalPrice": 4958,
    "price": 2975,
    "serviceId": "package_vip",
  },
]
`;
